--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
     const alb = new Char(eG, aM, 162.8, wS,"Albedo", "images/Albedo_Portrait.webp");
     const xia = new Char(eA, aL, 162.2, wP,"Xiao", "images/Xiao_Portrait.webp");
     const cyn = new Char(eE, aS, 161.9, wP,"Cyno", "images/Cyno_Portrait.webp");
-    const m = [hei, ben, xig, ven, kaz, cho, gor, raz, xia, sca, tig, cyn, alb];
+    const mik = new Char(eC, aM, 161.9, wP,"Mika", "images/Mika_Portrait.webp");
+    const m = [hei, ben, xig, ven, kaz, cho, gor, raz, xia, sca, tig, cyn, alb, mik];
     ship();
     document.getElementById("butt").onclick = function() {ship()};
     function ship() {
